[Desenvolvimento] - Ajuste no sistema para somente sondagem - Filtro de sondagem

--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/src/components/navigation/TopMenu.css
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/src/components/navigation/TopMenu.css
@@ -5,12 +5,12 @@
 
 #logo-content-top-menu {
     width: 265px;
-    background-color: #FBFBFC;
+    background-color: #626263;
 }
 
 #logo-top-menu {
-    width: 132px;
-    height: 46px;
+    width: 177px;
+    height: 31px;
 }
 
 #top-menu-bar {
