--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/src/components/classRecord/Poll.css
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/src/components/classRecord/Poll.css
@@ -38,7 +38,7 @@ th.align-middle.border.text-color-purple {
 }
 
 .btn-planning {
-    margin: 10px;
+    margin: 10px 10px 10px 0px;
 }
 
 .btn.btn-outline-primary.btn-sm.btn-planning {
