[Ajuste] - ajuste no comportamento do botao de salvar

--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/src/components/classRecord/Poll.css
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/src/components/classRecord/Poll.css
@@ -1,6 +1,9 @@
 ﻿.btn.btn-save.text-white {
     background-color: #F39200;
 }
+.btn.btn-save.text-white.deactive {
+    background-color: #EEEEEE;
+}
 .testcursor{
     cursor:pointer;
 }
