[Ajuste] - ajuste no botao de escolha do tipo de sondagem de matematica

--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/src/components/classRecord/Poll.css
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/src/components/classRecord/Poll.css
@@ -145,3 +145,7 @@ th.align-middle.border.text-color-purple {
     width: 33%;
     display: inline-flex;
 }
+
+.btn-group.mr-2.btn-group-sm.pills {
+    padding: .5rem 1rem;
+}
