--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/src/App.css
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/src/App.css
@@ -44,6 +44,14 @@
     color: #7C4DFF;
 }
 
+.sc-text-size-000 {
+    font-size: 9px;
+}
+
+.sc-text-size-00 {
+    font-size: 10px;
+}
+
 .sc-text-size-0 {
     font-size: 12px;
 }
