--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/src/components/login/Login.css
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/src/components/login/Login.css
@@ -1,35 +1,44 @@
-﻿.card.shadow{
-    width:364px;
+﻿.card.shadow {
+  width: 364px;
 }
 .btn.btn-login.text-white {
-    background-color: #33B082;
-    border-radius: 4px;
-    width: 100%;
+  background-color: #33b082;
+  border-radius: 4px;
+  width: 100%;
 }
 #logo-prefeitura-login {
-    width: 127px;
+  width: 127px;
 }
 #logo-login {
-    width: 234px;
+  width: 234px;
 }
 .text-danger.text-login {
-    text-align: right;
-    font-size: 11px;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.28px;
+  color: #b40c02;
+  border-radius: 4px;
+  border: solid 2px #b40c02;
+  padding: 1rem;
+  text-align: center;
 }
 ::-webkit-input-placeholder {
-    color: #929494;
-    font-size: 12px;
+  color: #929494;
+  font-size: 12px;
 }
 ::-moz-placeholder {
-    color: #929494;
-    font-size: 12px;
+  color: #929494;
+  font-size: 12px;
 }
 
 :-ms-input-placeholder {
-    color: #929494;
-    font-size: 12px;
+  color: #929494;
+  font-size: 12px;
 }
 ::placeholder {
-    color: #929494;
-    font-size: 12px;
+  color: #929494;
+  font-size: 12px;
 }
